# compass-AI

./: .gitignore  CLAUDE.md  LOOP_PROMPT.md  Makefile  README.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json
app/electron/: engine-bridge.ts  main.ts  oauth-providers.ts  oauth.ts  preload.ts
app/src/: App.tsx  index.css  vite-env.d.ts
app/src/components/: ErrorBoundary.tsx  FeedbackButton.tsx
app/src/hooks/: useStreamingChat.ts
app/src/pages/: ChatPage.tsx  ConflictsPage.tsx  DashboardPage.tsx  DiscoverPage.tsx  DocumentsPage.tsx  EvidencePage.tsx  LoginPage.tsx  OnboardingPage.tsx  PresentationsPage.tsx  PrototypesPage.tsx  SettingsPage.tsx  WorkspacePage.tsx
app/src/stores/: auth.ts  chat.ts  conflicts.ts  credentials.ts  dashboard.ts  documents.ts  evidence.ts  notifications.ts  opportunities.ts  presentations.ts  prototypes.ts  settings.ts  workspace.ts  workspaceManager.ts
app/src/types/: credentials.ts  engine.ts
cloud/: pyproject.toml
cloud/compass_cloud/: __init__.py  auth.py  billing.py  documents.py  enterprise.py  models.py  proxy.py  server.py  teams.py
demo/: README.md  record_demo.sh  run_demo.sh
demo/sample_data/analytics/: feature_usage.csv  usage_metrics.csv
docs/: beta-survey.md  connector-sdk.md  implementation-plan.md  mcp-setup.md  mvp-spec.md  quickstart.md  roadmap.md  yc-positioning.md
docs/adr/: 001-cli-first.md
engine/: .env.example  README.md  pyproject.toml
engine/compass/: __init__.py  __main__.py  activity.py  cli.py  config.py  documents.py  git_utils.py  mcp_server.py  server.py  sync.py
engine/compass/agents/: __init__.py
engine/compass/connectors/: __init__.py  analytics.py  base.py  confluence_connector.py  docs.py  github_connector.py  google_docs_connector.py  interviews.py  jira_connector.py  linear_connector.py  live_base.py  notion_connector.py  sdk.py  slack_connector.py  support.py  zendesk_connector.py
engine/compass/engine/: __init__.py  analyst.py  challenger.py  dashboarder.py  discoverer.py  experimenter.py  history.py  knowledge_graph.py  llm.py  orchestrator.py  planner.py  presenter.py  prototyper.py  reconciler.py  reporter.py  specifier.py  writer.py
engine/compass/models/: __init__.py  analysis.py  auth.py  challenges.py  conflicts.py  dashboards.py  documents.py  experiments.py  planning.py  presentations.py  prototypes.py  sources.py  specs.py
engine/compass/prompts/: __init__.py  analyze_data_v1.py  challenge_v1.py  dashboard_v1.py  discover_v1.py  experiment_v1.py  plan_week_v1.py  present_v1.py  prototype_v1.py  reconcile_v1.py  specify_v1.py  write_brief_v1.py  write_update_v1.py
engine/compass/prototype_components/: __init__.py
engine/compass/templates/: __init__.py
engine/compass/workflows/: __init__.py  discovery.py
engine/tests/: test_connectors.py  test_e2e_cli.py  test_knowledge_graph.py  test_mcp.py  test_models.py  test_output_quality.py  test_prompt_regression.py  test_server.py
site/: index.html
(+57 files in other folders)
