[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compass-cloud"
version = "0.1.0"
description = "Compass Cloud — hosted API with auth, LLM proxy, and billing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
